--- a/Stats Notes.ipynb
+++ b/Stats Notes.ipynb
@@ -78,20 +78,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "np.random.seed(29)"
+    "### on another notebook"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### RANDOM NUMBER GENERATION WITH NUMPY\n",
-    "- np.random.choice: "
-   ]
+   "source": []
   }
  ],
  "metadata": {
