--- a/Stats Notes.ipynb
+++ b/Stats Notes.ipynb
@@ -368,6 +368,256 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example Problems\n",
+    "\n",
+    "### Carnival Dice Rolls\n",
+    "\n",
+    "> You are at a carnival and come across a person in a booth offering you a game\n",
+    "> of \"chance\" (as people in booths at carnivals tend to do).\n",
+    "\n",
+    "> You pay 5 dollars and roll 3 dice. If the sum of the dice rolls is greater\n",
+    "> than 12, you get 15 dollars. If it's less than or equal to 12, you get\n",
+    "> nothing.\n",
+    "\n",
+    "> Assuming the dice are fair, should you play this game? How would this change\n",
+    "> if the winning condition was a sum greater than *or equal to* 12?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 1, 3, ..., 5, 6, 5])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_trials = nrows= 10_000 #number of times we're going to roll\n",
+    "n_dice = ncols= 3 #number of dice\n",
+    "\n",
+    "rolls = np.random.choice([1,2,3,4,5,6], n_trials * n_dice)\n",
+    "rolls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 3, 4],\n",
+       "       [4, 6, 5],\n",
+       "       [2, 3, 4],\n",
+       "       ...,\n",
+       "       [5, 5, 3],\n",
+       "       [1, 5, 2],\n",
+       "       [5, 2, 1]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rolls = np.random.choice([1,2,3,4,5,6], n_trials * n_dice).reshape(nrows,ncols)\n",
+    "rolls #reshape for 10,000 columns and 3 rows\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "104735"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#AGAIN, we want an outcome that is OVER 12\n",
+    "sums_by_trial = rolls.sum()\n",
+    "sums_by_trial\n",
+    "#this adds everything up row by row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([11, 15,  9, ..., 13,  8,  8])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#to do it CORRECTLY\n",
+    "sums_by_trial = rolls.sum(axis=1)\n",
+    "sums_by_trial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can now convert each value in our array to a boolean value indicating whether or not we won:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "wins = sums_by_trial >12\n",
+    "wins\n",
+    "#this will give us whether the 3 rolls added up to over 12 in True and False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2525"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "win_rate = wins.mean()\n",
+    "win_rate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### with win rate, we can calculate profit:\n",
+    "- $15 if your 3 rolls add up to over 12\n",
+    "\n",
+    "- $5 to play the game\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.2125"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expected_winnings = win_rate * 15\n",
+    "cost = 5\n",
+    "expected_profit = expected_winnings - cost\n",
+    "expected_profit\n",
+    "#losing 1.2125 on average"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.7875"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expected_winnings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# change the standards to 12 or greater! instead of just greater then 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4764999999999997"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wins= sums_by_trial >=12\n",
+    "win_rate = wins.mean()\n",
+    "expected_winnings= win_rate * 15 #prize\n",
+    "cost= 5\n",
+    "expected_profit = expected_winnings -cost\n",
+    "expected_profit\n",
+    "# just by changing for 12 or greater... your probability changes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Winnings = 3.7875 (greater than 12) VS .47649 (12 or greater)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
