--- a/Stats Notes.ipynb
+++ b/Stats Notes.ipynb
@@ -618,6 +618,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PRACTICE:\n",
+    "- what is the probabilty of rolling \"snake eyes\" on a roll of two dice?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "- what is the probabilty of rolling \"snake eyes\" on a roll of two dice?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_trials = nrows= 10_000 #number of times we're going to roll\n",
+    "n_dice = ncols= 2 #number of dice\n",
+    "\n",
+    "roll1 = np.random.choice([1,2,3,4,5,6], n_trials * n_dice).reshape(nrows,ncols)\n",
+    "roll2 = np.random.choice([1,2,3,4,5,6], n_trials * n_dice).reshape(nrows,ncols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 7,  5],\n",
+       "       [ 8,  4],\n",
+       "       [10, 11],\n",
+       "       ...,\n",
+       "       [ 6,  8],\n",
+       "       [ 7,  5],\n",
+       "       [ 9,  9]])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sums_by_trial = roll1 + roll2\n",
+    "sums_by_trial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False],\n",
+       "       [False, False],\n",
+       "       [False, False],\n",
+       "       ...,\n",
+       "       [False, False],\n",
+       "       [False, False],\n",
+       "       [False, False]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wins = sums_by_trial == 2\n",
+    "wins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02705"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "win_rate = wins.mean()\n",
+    "win_rate"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
