--- a/Stats Notes.ipynb
+++ b/Stats Notes.ipynb
@@ -621,17 +621,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PRACTICE:\n",
-    "- what is the probabilty of rolling \"snake eyes\" on a roll of two dice?"
+    "# PRACTICE:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## #1: what is the probabilty of rolling \"snake eyes\" on a roll of two dice?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.027777777777777776"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "- what is the probabilty of rolling \"snake eyes\" on a roll of two dice?"
+    "#ANSWER via probability\n",
+    "(1/6) * (1/6)\n",
+    "#probability of getting a 1 on TWO dice"
    ]
   },
   {
@@ -640,86 +659,246 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#ANSWER via simulation\n",
     "n_trials = nrows= 10_000 #number of times we're going to roll\n",
-    "n_dice = ncols= 2 #number of dice\n",
-    "\n",
-    "roll1 = np.random.choice([1,2,3,4,5,6], n_trials * n_dice).reshape(nrows,ncols)\n",
-    "roll2 = np.random.choice([1,2,3,4,5,6], n_trials * n_dice).reshape(nrows,ncols)"
+    "n_dice = ncols= 2 #number of dice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#to get your rolls\n",
+    "rolls = np.random.choice([1,2,3,4,5,6], n_trials * n_dice).reshape(nrows,ncols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 7,  5],\n",
-       "       [ 8,  4],\n",
-       "       [10, 11],\n",
-       "       ...,\n",
-       "       [ 6,  8],\n",
-       "       [ 7,  5],\n",
-       "       [ 9,  9]])"
+       "array([False, False, False, ..., False, False, False])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sums_by_trial = roll1 + roll2\n",
-    "sums_by_trial"
+    "rolls.sum(axis=1) == 2\n",
+    "#dice total has to equal 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[False, False],\n",
-       "       [False, False],\n",
+       "0.0275"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(rolls.sum(axis=1) == 2).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## #2 There's a 30% chance my son takes a nap on any given weekend day. What is the chance that he takes a nap at least one day this weekend? What is the probability that he doesn't nap at all?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_nap = .3 #30% probability of nap\n",
+    "\n",
+    "ndays = n_cols = 2 #saturday and sunday (#of days)\n",
+    "\n",
+    "n_simulated_weekends = n_rows = 10**6 #number of attempts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To determine whether or not a nap is taken on a given day, we'll generate a random number between 0 and 1, and say that it is a nap if it is less than our probability of taking a nap."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trails = np.random.random((n_rows, n_cols))\n",
+    "#gives randoms between 0 and 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.25899888, 0.62842359],\n",
+       "       [0.12435768, 0.87888073],\n",
+       "       [0.76481329, 0.90518264],\n",
+       "       [0.04701055, 0.0030957 ],\n",
+       "       [0.28765568, 0.35455063],\n",
+       "       [0.09130286, 0.82251575],\n",
+       "       [0.62664399, 0.16970214],\n",
+       "       [0.17970919, 0.474695  ],\n",
+       "       [0.77112604, 0.99291645],\n",
+       "       [0.73150172, 0.55338451]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trails[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True, False],\n",
+       "       [ True, False],\n",
        "       [False, False],\n",
        "       ...,\n",
-       "       [False, False],\n",
+       "       [ True, False],\n",
        "       [False, False],\n",
        "       [False, False]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wins = sums_by_trial == 2\n",
-    "wins"
+    "naps= trails < p_nap #probability that trails is less than 30%\n",
+    "naps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have each day as either true or false, we can take the sum of each row to find the total number of naps for the weekend. When we sum an array of boolean values, numpy will treat `True` as 1 and `False` as 0."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.02705"
+       "array([1, 1, 0, ..., 1, 0, 0])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "win_rate = wins.mean()\n",
-    "win_rate"
+    "naps.sum(axis=1)\n",
+    "#0 = no nap\n",
+    "#1 = nap on 1 day\n",
+    "#2 = nap on both days"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.509758"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can use this to answer our original questions, what is the probability that AT LEAST one nap is taken?\n",
+    "(naps.sum(axis=1) >= 1).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.490242"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What is the probability no naps are taken?\n",
+    "(naps.sum(axis=1) == 0).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.090121"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What is the probability naps being taken on both days?\n",
+    "(naps.sum(axis=1) == 2).mean()"
    ]
   },
   {
