--- a/Stats Notes.ipynb
+++ b/Stats Notes.ipynb
@@ -902,6 +902,289 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## #3  There are ten options in a blind-box style collectable, but you are only likely to get the one you want the most at a probability of one out of every twenty boxes because its a little rarer.\n",
+    "\n",
+    "What is the probability of getting your desired collectable if you buy three blindbox toys?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_collect = .05 #1/20 probability of desired collectable\n",
+    "\n",
+    "n_boxes = ncols= 3 #number of boxes\n",
+    "\n",
+    "n_trails = n_rows = 10**6 #number of attempts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.68056255, 0.78103963],\n",
+       "       [0.72462227, 0.24469949],\n",
+       "       [0.57703801, 0.78767832],\n",
+       "       ...,\n",
+       "       [0.61142449, 0.03689136],\n",
+       "       [0.89539292, 0.91427327],\n",
+       "       [0.21325399, 0.65909719]])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_purchases = np.random.random((n_rows, n_cols))\n",
+    "total_purchases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False],\n",
+       "       [False, False],\n",
+       "       [False, False],\n",
+       "       ...,\n",
+       "       [False,  True],\n",
+       "       [False, False],\n",
+       "       [False, False]])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_purchases < p_collect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.097729"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((total_purchases < p_collect).sum(axis=1) >=1).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## #4 One With Dataframes\n",
+    "\n",
+    "Let's take a look at one more problem:\n",
+    "\n",
+    "> What is the probability of getting at least one 3 in 3 dice rolls?\n",
+    "\n",
+    "To simulate this, we'll use a similar strategy to how we modeled the dice rolls in the previous example, but this time, we'll store the results in a pandas dataframe so that we can apply a lambda function that will check to see if one of the rolls was a 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_trials = nrows = 10 **6 #number of attemps\n",
+    "n_dice_rolled = ncols = 3 #number of dice \n",
+    "\n",
+    "rolls = np.random.choice([1,2,3,4,5,6], n_trials * n_dice_rolled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          False\n",
+       "1          False\n",
+       "2          False\n",
+       "3          False\n",
+       "4          False\n",
+       "           ...  \n",
+       "2999995    False\n",
+       "2999996    False\n",
+       "2999997    False\n",
+       "2999998    False\n",
+       "2999999    False\n",
+       "Length: 3000000, dtype: bool"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(rolls).apply(lambda row: 3 in row.values, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.166653"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(rolls).apply(lambda row: 3 in row.values, axis=1).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's break down what's going on here:\n",
+    "\n",
+    "1. First we assign values for the number of rows and columns we are going to use\n",
+    "1. Next we create the `rolls` variable that holds a 3 x 10,000 matrix where each element is a randomly chosen number from 1 to 6\n",
+    "1. Lastly we create a dataframe from the rolls\n",
+    "    1. `pd.DataFrame(rolls)` converts our 2d numpy matrix to a pandas DataFrame\n",
+    "    1. `.apply(...` applies a function to each **row** in our dataframe, because we specified `axis=1`, the function will be called with each row as it's argument. The body of the function checks to see if the value `3` is in the values of the row, and will return either `True` or `False`\n",
+    "    1. `.mean()` takes our resulting series of boolean values, and treats `True` as 1 and `False` as 0, to give us the average rate of `True`s, in this case, the simulated probability of getting a 3 in 3 dice rolls."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## #5 Recreate the blindbox problem utilizing the above strategy!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_collect = .05 #1/20 probability of desired collectable\n",
+    "\n",
+    "n_boxes = ncols= 3 #number of boxes\n",
+    "\n",
+    "n_trails = n_rows = 10**6 #number of attempts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.90559479, 0.53126914],\n",
+       "       [0.02318502, 0.89400176],\n",
+       "       [0.41830072, 0.92737271],\n",
+       "       ...,\n",
+       "       [0.80327722, 0.30264089],\n",
+       "       [0.70007345, 0.48303601],\n",
+       "       [0.72744118, 0.38709401]])"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_purchases = np.random.random((n_rows, n_cols))\n",
+    "total_purchases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         False\n",
+       "1         False\n",
+       "2         False\n",
+       "3         False\n",
+       "4         False\n",
+       "          ...  \n",
+       "999995    False\n",
+       "999996    False\n",
+       "999997    False\n",
+       "999998    False\n",
+       "999999    False\n",
+       "Length: 1000000, dtype: bool"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(total_purchases).apply(lambda row: 3 in row.values, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.166653"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(rolls).apply(lambda row: 3 in row.values, axis=1).mean()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
