--- a/Stats Notes and Practice.ipynb
+++ b/Stats Notes and Practice.ipynb
@@ -1095,93 +1095,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_collect = .05 #1/20 probability of desired collectable\n",
-    "\n",
-    "n_boxes = ncols= 3 #number of boxes\n",
-    "\n",
-    "n_trails = n_rows = 10**6 #number of attempts"
+    "#purchasing 3 blind boxes, 10,000 different time\n",
+    "n_rows = 10_000 #number of attempts\n",
+    "ncols= 3 #number of boxes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outcomes = [1,2,3,4,5,6,7,8,9,10]\n",
+    "prob_win= 0.05 #1/20 chance\n",
+    "prob_others = (1-.05)/9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.random.choice(outcomes, n_rows*n_cols, p=[prob_win, prob_others , prob_others, prob_others, prob_others, prob_others, prob_others, prob_others, prob_others, prob_others]).reshape(n_rows, n_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.90559479, 0.53126914],\n",
-       "       [0.02318502, 0.89400176],\n",
-       "       [0.41830072, 0.92737271],\n",
-       "       ...,\n",
-       "       [0.80327722, 0.30264089],\n",
-       "       [0.70007345, 0.48303601],\n",
-       "       [0.72744118, 0.38709401]])"
+       "array([[ 3,  9],\n",
+       "       [ 1, 10],\n",
+       "       [ 4,  3],\n",
+       "       [ 6,  9],\n",
+       "       [ 4,  5]])"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "total_purchases = np.random.random((n_rows, n_cols))\n",
-    "total_purchases"
+    "data[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0         False\n",
-       "1         False\n",
-       "2         False\n",
-       "3         False\n",
-       "4         False\n",
-       "          ...  \n",
-       "999995    False\n",
-       "999996    False\n",
-       "999997    False\n",
-       "999998    False\n",
-       "999999    False\n",
-       "Length: 1000000, dtype: bool"
+       "0    True\n",
+       "1    True\n",
+       "dtype: bool"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(total_purchases).apply(lambda row: 3 in row.values, axis=1)"
+    "pd.DataFrame(data).apply(lambda row: 1 in row.values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.166653"
+       "0.0972"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(rolls).apply(lambda row: 3 in row.values, axis=1).mean()"
+    "pd.DataFrame(data).apply(lambda row: 1 in row.values, axis=1).mean()"
    ]
   },
   {
