--- a/Simulations.ipynb
+++ b/Simulations.ipynb
@@ -1,6 +1,69 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. How likely is it that you roll doubles when rolling two dice?\n",
+    "\n",
+    "1. If you flip 8 coins, what is the probability of getting exactly 3 heads? What is the probability of getting more than 3 heads?\n",
+    "\n",
+    "1. There are approximitely 3 web development cohorts for every 1 data science cohort at Codeup. Assuming that Codeup randomly selects an alumni to put on a billboard, what are the odds that the two billboards I drive past both have data science students on them?\n",
+    "\n",
+    "1. Codeup students buy, on average, 3 poptart packages (+- 1.5) a day from the snack vending machine. If on monday the machine is restocked with 17 poptart packages, how likely is it that I will be able to buy some poptarts on Friday afternoon?\n",
+    "\n",
+    "1. Compare Heights\n",
+    "\n",
+    "    - Men have an average height of 178 cm and standard deviation of 8cm.\n",
+    "    - Women have a mean of 170, sd = 6cm.\n",
+    "    - If a man and woman are chosen at random, P(woman taller than man)?\n",
+    "\n",
+    "1. When installing anaconda on a student's computer, there's a 1 in 250 chance\n",
+    "   that the download is corrupted and the installation fails. What are the odds\n",
+    "   that after having 50 students download anaconda, no one has an installation\n",
+    "   issue?  100 students?\n",
+    "\n",
+    "    What is the probability that we observe an installation issue within the first\n",
+    "    150 students that download anaconda?\n",
+    "\n",
+    "    How likely is it that 450 students all download anaconda without an issue?\n",
+    "\n",
+    "1. There's a 70% chance on any given day that there will be at least one food\n",
+    "   truck at Travis Park. However, you haven't seen a food truck there in 3 days.\n",
+    "   How unlikely is this?\n",
+    "\n",
+    "    How likely is it that a food truck will show up sometime this week?\n",
+    "\n",
+    "1. If 23 people are in the same room, what are the odds that two of them share a birthday? What if it's 20 people? 40?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
