--- a/Simulations.ipynb
+++ b/Simulations.ipynb
@@ -119,11 +119,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1679"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "rolls"
+    "rolls = pd.DataFrame(rolls)\n",
+    "rolls.apply(lambda x:min(x) == max(x), 1).mean()"
    ]
   },
   {
