--- a/Simulations.ipynb
+++ b/Simulations.ipynb
@@ -440,8 +440,8 @@
     "#Mon:17 - (1.5-4.5) = 15.5-12.5 =day 1 prob = 100%\n",
     "#Tues: 15-12.5 - (1.5-4.5)= 13.5-8 = day 2 prob 100% \n",
     "#Wed:13.5-8 - (1.5-4.5)= 12-3.5 = day 3 prob 100%\n",
-    "#Thurs: 12-3.5 - (1.5-4.5)= 10.5-(-1) = day 4, could have 10.5 or -1 left\n",
-    "#Friday: 10.5 -(-1) - (1.5-4.5) = 9-(-5.5)= day 4, could have 9 or -5.5"
+    "#Thurs: 12-3.5 - (1.5-4.5)= 10.5-(-1) = day 4, could have 10.5 or -1 left / 50% chance\n",
+    "#Friday: 10.5 -(-1) - (1.5-4.5) = 9-(-5.5)= day 4, could have 9 or -5.5/ 50% chance"
    ]
   },
   {
@@ -571,6 +571,73 @@
    "source": [
     "prob_left_friday = package_left_friday.mean()\n",
     "prob_left_friday"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### # 4 TEACHER PROBLEM WORK THROUGH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pop_avg = 3\n",
+    "pop_std = 1.5\n",
+    "n_cols= 5\n",
+    "n_rows = 1_000_000\n",
+    "simulated_consumed_poptarts= np.random.normal(pop_avg, pop_std,(n_rows, n_days))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3.44693733,  4.42889231,  2.42817599,  5.3524548 ,  2.95095361],\n",
+       "       [ 1.45939835,  3.81778348,  3.57960384,  1.07970233,  3.23244665],\n",
+       "       [ 3.43070855,  1.06081584,  4.52303446,  3.91044364,  3.61662124],\n",
+       "       ...,\n",
+       "       [ 4.33266582,  4.67680225,  5.04369341,  0.26036987,  4.26304244],\n",
+       "       [ 2.94865386,  1.11381255,  3.88711793,  0.30990011,  5.49360944],\n",
+       "       [ 1.54844103,  5.50277617, -0.1872898 ,  2.37429534,  0.7291635 ]])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simulated_consumed_poptarts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.725086"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculated_prob = (simulated_consumed_poptarts.sum(axis=1) <17).mean()\n",
+    "calculated_prob"
    ]
   },
   {
@@ -808,6 +875,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### #5 TEACHER WALK THROUGH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "men_avg= 178\n",
+    "men_std=8\n",
+    "women_avg=170\n",
+    "women_std=6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_men = np.random.normal(men_avg, men_std, 1_000_000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_women = np.random.normal(women_avg, women_std, 1_000_000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.211955"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculated_prob = (s_women > s_men).mean()\n",
+    "calculated_prob"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -941,7 +1068,482 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### #6 TEACHER WALKTHROUGH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 50 installs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nrows= 1_000_000\n",
+    "n_cols= 50\n",
+    "conda_fails= 1\n",
+    "success = 0\n",
+    "prob_fail= 1/250"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob_fail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "installs = np.random.random((nrows,n_cols))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False, False, False],\n",
+       "       [False, False, False, False, False],\n",
+       "       [False, False, False, False, False],\n",
+       "       ...,\n",
+       "       [False, False, False, False, False],\n",
+       "       [False, False, False, False, False],\n",
+       "       [False, False, False, False, False]])"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "installs < prob_fail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9801"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((installs < prob_fail).sum(axis=1)== 0).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#100 installs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nrows= 1_000_000\n",
+    "n_cols= 100\n",
+    "conda_fails= 1\n",
+    "success = 0\n",
+    "prob_fail= 1/250"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "installs = np.random.random((nrows,n_cols))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       ...,\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False]])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "installs < prob_fail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.669975"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((installs < prob_fail).sum(axis=1)== 0).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 150 installs at least 1 fail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nrows= 1_000_000\n",
+    "n_cols= 450\n",
+    "conda_fails= 1\n",
+    "success = 0\n",
+    "prob_fail= 1/250"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "installs = np.random.random((nrows,n_cols))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       ...,\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False]])"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "installs < prob_fail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.835353"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((installs < prob_fail).sum(axis=1)> 0).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 450 installs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nrows= 1_000_000\n",
+    "n_cols= 450\n",
+    "conda_fails= 1\n",
+    "success = 0\n",
+    "prob_fail= 1/250"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "installs = np.random.random((nrows,n_cols))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       ...,\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False],\n",
+       "       [False, False, False, ..., False, False, False]])"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "installs < prob_fail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.164398"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((installs < prob_fail).sum(axis=1)== 0).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### #7 There's a 70% chance on any given day that there will be at least one food truck at Travis Park. However, you haven't seen a food truck there in 3 days. How unlikely is this?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_rows= 1_000_000\n",
+    "n_cols= 3\n",
+    "food_truck=1\n",
+    "no_truck=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data= np.random.random((n_rows,n_cols))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truck_prob = 0.7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((data < truck_prob).sum(axis=1)==0).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# on last 2 days of week"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_rows= 1_000_000\n",
+    "n_cols= 2 #2 days left in week\n",
+    "food_truck=1\n",
+    "no_truck=0\n",
+    "truck_prob = 0.7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lunch_days = np.random.random((n_rows,n_cols))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculated_prob= ((lunch_days < truck_prob).sum(axis=1) >0).mean()\n",
+    "calculated_prob"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### #8 If 23 people are in the same room, what are the odds that two of them share a birthday? What if it's 20 people? 40?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#365 days in a year\n",
+    "#23 people in class\n",
+    "#prob of same birthday"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outcomes = range(0, 365) #number of days in a year\n",
+    "n_trails= 23 #number of students\n",
+    "n_simulated= 1_000_000 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classrooms= np.random.choice(outcomes, size=(n_simulated, n_trials))"
    ]
   },
   {
@@ -952,11 +1554,11 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "#### #8 If 23 people are in the same room, what are the odds that two of them share a birthday? What if it's 20 people? 40?"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
