--- a/Probability Distributions Notes.ipynb
+++ b/Probability Distributions Notes.ipynb
@@ -27,6 +27,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -62,6 +69,155 @@
     "\n",
     "https://en.wikipedia.org/wiki/List_of_probability_distributions\n",
     "https://www.kdnuggets.com/2020/02/probability-distributions-data-science.html\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### scipy distribution object: What can we calculate from distribution?\n",
+    "\n",
+    "\n",
+    "- value -> probability  \n",
+    "   -- pmf: equal to a point (only for discrete distributions!)  \n",
+    "    -- pdf: equal to a point (for continuous distributions)  \n",
+    "   -- cdf: less than or equal to a point  \n",
+    "   -- sf: greater than a point  \n",
+    "- probability -> value  \n",
+    "   -- ppf: less than or equal to a point  \n",
+    "   -- isf: greater than a point  \n",
+    "- rvs for random values "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Uniform Distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Rolling a fair 6-sided die\n",
+    "    - what does the probability distribution look like?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using Scipy stats module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<scipy.stats._distn_infrastructure.rv_frozen at 0x7fcf82e8bb20>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "die_distribution = stats.randint(1,7)\n",
+    "die_distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.16666666666666666"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What is probability of rolling 3?\n",
+    "\n",
+    "die_distribution.pmf(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What is probability of rolling 3 or less?\n",
+    "\n",
+    "die_distribution.cdf(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What is the likelihood we roll a value higher than 4?\n",
+    "\n",
+    "die_distribution.sf(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# There is a 1/3 chance a dice roll will be higher than what value\n",
+    "\n",
+    "die_distribution.isf(3)"
    ]
   },
   {
