--- a/probability_distributions_lesson.ipynb
+++ b/probability_distributions_lesson.ipynb
@@ -317,13 +317,14 @@
    "outputs": [],
    "source": [
     "# Random variable?\n",
-    "\n",
+    "#x= daily sales\n",
     "\n",
     "# Use Scripy Stats module to generte a dist:\n",
-    "\n",
+    "mean= 12000\n",
+    "std_dev = 2000\n",
     "\n",
     "# use apporpriate method to predict probability\n",
-    "\n"
+    "sales = stats.norm(mean, std_dev)\n"
    ]
   },
   {
@@ -354,7 +355,8 @@
    "outputs": [],
    "source": [
     "# Use cdf to find probability for any given X or less.\n",
-    "\n"
+    "\n",
+    "sales.cdf(10000)"
    ]
   },
   {
@@ -385,7 +387,8 @@
    "outputs": [],
    "source": [
     "# use sf to find probability for any given X or more.\n",
-    "\n"
+    "\n",
+    "sales.sf(15000)"
    ]
   },
   {
@@ -423,7 +426,8 @@
    "outputs": [],
    "source": [
     "# Given a probability what is the value of X?\n",
-    "\n"
+    "\n",
+    "sales.isf(0.1).round(4)"
    ]
   },
   {
@@ -472,35 +476,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45500.26389635839"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# If the assembly line produced 1000,000 iphone last year, how many iphone were\n",
     "# built as 'defective'.\n",
-    "\n"
+    "\n",
+    "mean= 500\n",
+    "std_dev= 25\n",
+    "phones= stats.norm(mean, std_dev)\n",
+    "(phones.sf(550) + phones.cdf(450)) *1_000_000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "129734.03829466889"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 2 If the standard deviation of thickness increased to 33 μm due to manufacuring issue at the assembly plant,\n",
     "# how many defective iphones were built?\n",
-    "\n"
+    "\n",
+    "mean = 500\n",
+    "std_dev = 33\n",
+    "phones= stats.norm(mean, std_dev)\n",
+    "(phones.sf(550) + phones.cdf(450)) *1_000_000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "355.03938074694156"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Apple was able to implement new improved machining process and reduce the std dev to 14 μm.\n",
     "# How many defective iphone will be built?\n",
-    "\n"
+    "\n",
+    "mean = 500\n",
+    "std_dev = 14\n",
+    "phones= stats.norm(mean, std_dev)\n",
+    "(phones.sf(550) + phones.cdf(450)) *1_000_000"
    ]
   },
   {
